--- a/index.html
+++ b/index.html
@@ -2,18 +2,56 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>ここにタイトル</title>
-<link href="css/reset.css" rel="stylesheet" type="text/css">
+<title>Welcome to Keko's blog</title>
 <link href="css/css.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<header>
-    <h1>サイト内におけるタイトル</h1>
-</header>
-<div id="branding">
-  <p>Simple Design.</p>
+<!-- ここはナビゲーションバーに -->
+<ul>
+    <li><a class="active" href="#top">Top</a></li>
+    <li><a href="#profile">Profile</a></li>
+    <li><a href="#product">Product</a></li>
+    <li><a href="#link">Link</a></li>
+</ul>
+
+<!-- 1ページ目 -->
+<div id="top">
+  <header>
+    <h1>Welcome to Keko's blog.</h1>
+  </header>  
 </div>
+
+<!-- 2ページ目 -->
+<div id="profile">
+  <h2>Profile</h2>
+</div>
+
+<!-- 3ページ目 -->
+<div id="product">
+    <h2>Product</h2>
+</div>
+
+<!-- 4ページ目 -->
+<div id="link">
+    <h2>Link</h2>
+</div>
+
+<!-- 最後のページに -->
+<footer>
+  <address>Copyright(C) K.Nagahori,Allright Reserved.</address>
+</footer>
+</body>
+</html>
+<!--
+<link href="css/reset.css" rel="stylesheet" type="text/css">
+<link href="css/css.css" rel="stylesheet" type="text/css">
+-->
+<!--
+  <script src="scripts/main.js"></script>
+-->
+<!--
+<p>Simple Design.</p>
 <nav>
   <ul>
     <li><a href="#">ナビ1</a></li>
@@ -32,8 +70,4 @@
   <a href="#" class="btn">&gt;もっと見る</a>
 </article>
 </section>
-<footer>
-<address>Copyright(C)ここに年 個人名or会社名,Allright Reserved.</address>
-</footer>
-</body>
-</html>
+-->
