--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 </head>
 
 <body>
+<script src="scripts/main.js"></script>
 <!-- ここはナビゲーションバーに -->
 <ul>
-    <li><a class="active" href="#top">Top</a></li>
-    <li><a href="#profile">Profile</a></li>
-    <li><a href="#product">Product</a></li>
-    <li><a href="#link">Link</a></li>
+  <li><a class="active" href="#top">Top</a></li>
+  <li><a href="#profile">Profile</a></li>
+  <li><a href="#product">Product</a></li>
+  <li><a href="#link">Link</a></li>
 </ul>
 
 <!-- 1ページ目 -->
@@ -25,49 +26,24 @@
 <!-- 2ページ目 -->
 <div id="profile">
   <h2>Profile</h2>
+  <img id="profImage" src="assets/profiletop.JPG" alt="K.Nagahori" title="自分の写真">
 </div>
 
 <!-- 3ページ目 -->
 <div id="product">
-    <h2>Product</h2>
+  <h2>Product</h2>
+  <img id="productImage" src="assets/product.png" alt="listManager" title="制作物1">
 </div>
 
 <!-- 4ページ目 -->
 <div id="link">
-    <h2>Link</h2>
+  <h2>Link</h2>
+  <!-- 最後のページに -->
+  <footer>
+    <address>Copyright(C) 2019 K.Nagahori Allright Reserved.</address>
+  </footer>
 </div>
 
-<!-- 最後のページに -->
-<footer>
-  <address>Copyright(C) K.Nagahori,Allright Reserved.</address>
-</footer>
+
 </body>
 </html>
-<!--
-<link href="css/reset.css" rel="stylesheet" type="text/css">
-<link href="css/css.css" rel="stylesheet" type="text/css">
--->
-<!--
-  <script src="scripts/main.js"></script>
--->
-<!--
-<p>Simple Design.</p>
-<nav>
-  <ul>
-    <li><a href="#">ナビ1</a></li>
-    <li><a href="#">ナビ2</a></li>
-    <li><a href="#">ナビ3</a></li>
-    <li><a href="#">ナビ4</a></li>
-  </ul>
-</nav>
-<section>
-<article>
-  <span class="date">ここに日付</span>
-  <h2>ここにタイトル</h2>
-  <p>
-   ここにテキスト
-  </p>
-  <a href="#" class="btn">&gt;もっと見る</a>
-</article>
-</section>
--->
