--- a/index.html
+++ b/index.html
@@ -26,13 +26,25 @@
 <!-- 2ページ目 -->
 <div id="profile">
   <h2>Profile</h2>
-  <img id="profImage" src="assets/profiletop.JPG" alt="K.Nagahori" title="自分の写真">
+  <div class="absolute" id="absProfile">
+    <div class="relative">
+      <div class="centering">
+        <img id="profImage" src="assets/profiletop.JPG" alt="K.Nagahori" title="自分の写真">        
+      </div>
+    </div>
+  </div>
 </div>
 
 <!-- 3ページ目 -->
 <div id="product">
   <h2>Product</h2>
-  <img id="productImage" src="assets/product.png" alt="listManager" title="制作物1">
+  <div class="absolute" id="absProduct">
+    <div class="relative">
+      <div class="centering">
+        <img id="productImage" src="assets/product.png" alt="listManager" title="制作物1">
+      </div>
+    </div>
+  </div>
 </div>
 
 <!-- 4ページ目 -->
