--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <meta charset="UTF-8">
 <title>Welcome to Keko's blog</title>
 <!--
--->
 <link href="css/css.css" rel="stylesheet" type="text/css">
+-->
 </head>
 
 <body>
 <!--
--->
 <script src="scripts/main.js"></script>
+-->
 <!-- ここはナビゲーションバーに -->
 <nav>
   <ul>
@@ -27,6 +27,9 @@
   <header>
     <h1>Welcome to Keko's blog.</h1>
   </header>
+  <section>
+    <!-- 挨拶文 -->
+  </section>
 </article>
 
 <!-- 2ページ目 -->
@@ -34,6 +37,15 @@
   <h2>Profile</h2>
   <section>
     <img id="profImage" src="assets/profiletop.JPG" alt="K.Nagahori" title="自分の写真">        
+  </section>
+  <section>
+    <!-- History -->
+  </section>
+  <section>
+    <!-- Skill -->
+  </section>
+  <section>
+    <!-- Hobby -->
   </section>
 </article>
 
@@ -43,11 +55,26 @@
   <section>
     <img id="productImage" src="assets/product.png" alt="listManager" title="制作物1">
   </section>
+  <section>
+    <!-- Purpose -->
+  </section>
+  <section>
+    <!-- Function -->
+  </section>
+  <section>
+    <!-- Distribution(配布先) -->
+  </section>
 </article>
 
 <!-- 4ページ目 -->
 <article id="link">
   <h2>Link</h2>
+  <section>
+    <!-- news -->
+  </section>
+  <section>
+    <!-- Links -->
+  </section>
   <aside>
     <footer>
       <address>Copyright(C) 2019 K.Nagahori Allright Reserved.</address>
