--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
   </header>
   <section>
     <!-- 挨拶文 -->
+    <p>
+      ようこそ！ここは関西大学総合情報学部所属の 長堀 の自己紹介ページです。
+      ハンドルネームは けこ です。どうぞよろしくお願いします。
+    </p>
   </section>
 </article>
 
@@ -40,12 +44,49 @@
   </section>
   <section>
     <!-- History -->
+    <h2>History</h2>
+    <ul>
+      <li>兵庫県神戸市で誕生</li>
+      <li>地元の小中で育つ</li>
+      <li>神戸市立神港高等学校情報処理科を卒業</li>
+      <li>関西大学総合情報学部に入学</li>
+    </ul>
   </section>
   <section>
     <!-- Skill -->
+    <h2>Skill</h2>
+    <h3>Front</h3>
+    <ul>
+      <li>HTML5</li>
+      <li>SCSS, CSS</li>
+      <li>JavaScript</li>
+      <li>PHP</li>
+    </ul>
+    <h3>Server</h3>
+    <ul>
+      <li>PHP</li>
+      <li>Node.js(勉強中)</li>
+    </ul>
+    <h3>Native</h3>
+    <ul>
+      <li>Python</li>
+      <li>Java</li>
+    </ul>
+    <h3>Begginer</h3>
+    <ul>
+      <li>C, C++, C#</li>
+    </ul>
   </section>
   <section>
-    <!-- Hobby -->
+    <!-- Fun -->
+    <h2>Fun</h2>
+    <ul>
+      <li>アニメ視聴</li>
+      <li>Tech本を読む</li>
+      <li>ゲーム</li>
+      <li>音楽</li>
+      <li>ウインドウショッピング</li>
+    </ul>
   </section>
 </article>
 
@@ -57,12 +98,26 @@
   </section>
   <section>
     <!-- Purpose -->
+    <h2>目的</h2>
+    <p>
+      友人から、Twitterのリストへの追加機能で肥大化したリストを整理したいという要望を受けた。
+      ちょうど、自分も困っていたところだったので、投稿画像からリストを整理するアプリを制作することにした。
+    </p>
   </section>
   <section>
     <!-- Function -->
+    <h2>機能</h2>
+    <ul>
+      <li>Twitterへのログイン</li>
+      <li>リストユーザの一覧の取得</li>
+      <li>選択したユーザのツイートから画像を取得</li>
+      <li>4つの画像を格子状に並べて中央に表示</li>
+      <li>リストへの追加・削除</li>
+    </ul>
   </section>
   <section>
     <!-- Distribution(配布先) -->
+    <h2>入手</h2>
   </section>
 </article>
 
@@ -71,9 +126,15 @@
   <h2>Link</h2>
   <section>
     <!-- news -->
+    <!--
+    <h2>News</h2>
+    -->
   </section>
   <section>
     <!-- Links -->
+    <h3>GitHub</h3>
+    <h3>Twitter</h3>
+    <h3>Facebook</h3>
   </section>
   <aside>
     <footer>
